<resources>
    <string name="app_name">My Application</string>
    <string name="username_text">用户名</string>
    <string name="username_hint">请输入用户名</string>
    <string name="psd_text">密&#12288;码</string>
    <string name="psd_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="no_network">请求数据出错啦!</string>
    <string name="login_succeed">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="not_login_text">未登录</string>
    <string name="logout_text">退出登录</string>
    <string name="login_out_succeed">退出登录成功</string>
    <string name="login_out_failed">退出登录失败</string>


    <string name="home_text">首页</string>
    <string name="order_text">订单</string>
    <string name="my_text">我的</string>
    <string name="setting_text">设置</string>
    <string name="start_record_text">开始录音</string>
    <string name="person_informat_text">个人资料</string>
</resources>
