<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="holder"
            type="com.example.myapplication.ui.app.LoginActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/username_hint"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@color/colorBlack_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psd_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/psd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/psd_hint"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/button_main_nomain_bg"
            android:enabled="false"
            android:onClick="@{holder::login}"
            android:text="@string/login_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</layout>