<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_1"
            android:background="@color/colorBlack_10" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/tab_home_select"
                android:gravity="center"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/home_text"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rb_order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/tab_order_select"
                android:gravity="center"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/order_text"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rb_my"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/tab_my_select"
                android:gravity="center"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/my_text"
                android:textColor="@color/text_color" />
        </RadioGroup>
    </LinearLayout>
</layout>